# utester

./: .gitignore  CMakeLists.txt  defne
include/: utester.h
src/: Logger.cpp  Logger.h  Output.cpp  Output.h  TestEngine.cpp  TestEngine.h  main.cpp  stdafx.h  util.cpp  util.h
src/exec/: Executer.h  ScopeExecuter.cpp  ScopeExecuter.h  Statistics.h  TestExecuter.cpp  TestExecuter.h
src/lib/: Object.cpp  Scope.cpp  Suit.cpp
test/: TestSuit.cpp
